--- a/week-7/day-4/Activities/06-HandlebarsAnimals/Unsolved/views/dog.handlebars
+++ b/week-7/day-4/Activities/06-HandlebarsAnimals/Unsolved/views/dog.handlebars
@@ -1,1 +1,8 @@
 <!-- 4. Output the animalType string, pet boolean, and fierceness number to the page -->
+<h1>Dogs</h1>
+
+<ul>
+    <li>{{animalType}}</li>
+    <li>{{pet}}</li>
+    <li>{{fierceness}}</li>
+</ul>
