--- a/week-7/day-4/Activities/06-HandlebarsAnimals/Unsolved/views/index.handlebars
+++ b/week-7/day-4/Activities/06-HandlebarsAnimals/Unsolved/views/index.handlebars
@@ -1,1 +1,11 @@
 <!-- 5. Output the animalType string, pet boolean, and fierceness number to the page for all the pets. -->
+<h1>Animals</h1>
+
+<ul>
+    {{#each animals}}
+    <li>Animal Type: {{animalType}}</li>
+    <li>Is this animal a pet? {{pet}}</li>
+    <li>Fierceness Level: {{fierceness}}</li>
+    <hr>
+    {{/each}}
+</ul>
