--- a/week-7/day-4/Activities/06-HandlebarsAnimals/Unsolved/views/dog.handlebars
+++ b/week-7/day-4/Activities/06-HandlebarsAnimals/Unsolved/views/dog.handlebars
@@ -2,7 +2,8 @@
 <h1>Dogs</h1>
 
 <ul>
-    <li>{{animalType}}</li>
-    <li>{{pet}}</li>
-    <li>{{fierceness}}</li>
+    <li>Animal Type: {{animalType}}</li>
+    <li>Is this animal a pet? {{pet}}</li>
+    <li>Fierceness Level: {{fierceness}}</li>
+    <hr>
 </ul>
